--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: 0!important;
+}
 @layer base {
   * {
     @apply border-gray-200 dark:border-dark-200;
